--- a/src/config/algs/qfix_sum_alt.yaml
+++ b/src/config/algs/qfix_sum_alt.yaml
@@ -25,7 +25,7 @@ agent_output_type: q
 learner: "qfix_learner"
 mixer: "qfix"
 sub_mixer: "vdn"
-fix_alt: False
+fix_alt: True
 mixing_embed_dim: 32
 hypernet_embed: 64
 lr: 0.001 # Learning rate for agents
@@ -33,4 +33,4 @@ td_lambda: 0.6 # 0.3 for 6h_vs_8z
 optimizer: 'adam'
 q_lambda: False
 
-name: "qfix_env=8_adam_td_lambda"
+name: "qfix_sum_alt"
