--- a/src/config/algs/qfix_mono_alt.yaml
+++ b/src/config/algs/qfix_mono_alt.yaml
@@ -27,8 +27,8 @@ mixer: "qfix"
 sub_mixer: "qmix"
 sum_alt: False
 mono_alt: True
-obs_obs: True
-obs_state: False
+obs_obs: False
+obs_state: True
 mixing_embed_dim: 32
 hypernet_embed: 64
 lr: 0.001 # Learning rate for agents
@@ -36,4 +36,4 @@ td_lambda: 0.6 # 0.3 for 6h_vs_8z
 optimizer: 'adam'
 q_lambda: False
 
-name: "qfix_mono"
+name: "qfix_mono_alt"
