--- a/src/config/algs/qfix_sum_alt.yaml
+++ b/src/config/algs/qfix_sum_alt.yaml
@@ -14,9 +14,12 @@ target_update_interval: 200
 t_max: 10050000
 
 # use the Q_Learner to train
+# TODO mac and agent are not set correctly..?
+mac: "n_mac"
+agent: "n_rnn"
 agent_output_type: "q"
+
 learner: "qfix_learner"
-# double_q: True
 mixer: "qfix_sum_alt"
 mixing_embed_dim: 32
 hypernet_embed: 64
@@ -25,11 +28,11 @@ adv_hypernet_embed: 64
 td_lambda: 0.6
 lr: 0.001
 
-num_kernel: 4
-is_minus_one: True
-weighted_head: True
-is_adv_attention: True
-is_stop_gradient: True
+qfix_type: "qfix"
+qfix_w_attention: False
+qfix_w_attention_num_kernel: 4
+qfix_w_delta: 0
+qfix_w_gt: 0
+qfix_detach_advantages: False
 
-# TODO rename
 name: "qfix_sum_alt"
