--- a/run-configs/run-q+fix-sum-alt-wgt1.toml
+++ b/run-configs/run-q+fix-sum-alt-wgt1.toml
@@ -1,14 +1,6 @@
-n_runs = 1
-
-arguments = [
-  "env_args.map_name=5m_vs_6m",
-  "t_max=10_000_000",
-]
-
 [[runs]]
-config = "qfix_sum_alt"
+config = "q+fix_sum_alt"
 arguments = [
   "name=q+fix_sum_alt_wgt1",
-  "qfix_type=q+fix",
   "qfix_w_gt=1",
 ]
