--- a/run-configs/run-q+fix-sum-alt.toml
+++ b/run-configs/run-q+fix-sum-alt.toml
@@ -1,14 +1,5 @@
-n_runs = 1
-
-arguments = [
-  "env_args.map_name=5m_vs_6m",
-  "t_max=10_000_000",
-]
-
 [[runs]]
-config = "qfix_sum_alt"
+config = "q+fix_sum_alt"
 arguments = [
   "name=q+fix_sum_alt",
-  "qfix_type=q+fix",
-  "qfix_w_gt=-1",
 ]
