--- a/run-configs/run-qfix-sum-alt.toml
+++ b/run-configs/run-qfix-sum-alt.toml
@@ -1,9 +1,5 @@
-n_runs = 1
-
-arguments = [
-  "env_args.map_name=5m_vs_6m",
-  "t_max=10_000_000",
-]
-
 [[runs]]
 config = "qfix_sum_alt"
+arguments = [
+  "name=qfix_sum_alt",
+]
