--- a/run-configs/tmux-source.conf
+++ b/run-configs/tmux-source.conf
@@ -1,5 +1,5 @@
 # source run-configs/tmux-source-baselines.conf
-source run-configs/tmux-source-qfix.conf
+# source run-configs/tmux-source-qfix.conf
 # source run-configs/tmux-source-q+fix.conf
 # source run-configs/tmux-source-q+fix-detach.conf
 # source run-configs/tmux-source-q+fix-sum-wgt.conf
